# simple-wasm-grpc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.wasm_rpc_host  README.md  build.sh  build_colocated.txt  compose_output.txt  docker-compose.yml  metrics_log.txt  protoc-gen-nanopb.sh  protoc-gen-pwpb_rpc.sh
baseline/: CMakeLists.txt  metrics_log.txt
baseline/evaluation/: round-trip-docker-same.sh  round-trip-docker.sh  round-trip-same.sh  round-trip.sh
baseline/evaluation/non-docker/: round-trip-same.sh  round-trip.sh
baseline/metrics/: round_trip_cpp_docker_log.txt  round_trip_cpp_log.txt  round_trip_cpp_same_docker_log_0ms.txt  round_trip_cpp_same_docker_log_5ms_2ms.txt  round_trip_cpp_same_docker_log_no_delay.txt  round_trip_cpp_same_log.txt  rount_trip_cpp_same_docker_log.txt
baseline/metrics/done/: round_trip_cpp_same_docker_log_1ms_1ms.txt  round_trip_cpp_same_docker_log_2ms_1ms.txt
baseline/scripts/: run.sh
baseline/src/: client.cpp  client_app.cpp  client_app_wasm.cpp  server.cpp  server_app.cpp  server_app_wasm.cpp
baseline/src/rpc_defs/: rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h
baseline2/: CMakeLists.txt  Dockerfile.tc
baseline2/metrics/done/: round_trip_cpp_same_docker_log_0ms.txt
baseline2/rpc_lib/: CMakeLists.txt  build.sh
baseline2/rpc_lib/native-install/include/rpc_lib/: rpc_client.h  rpc_envelope.pb.h  rpc_server.h  rpc_transport.h
baseline2/rpc_lib/native-install/lib/cmake/rpc_lib/: rpcLibTargets-release.cmake  rpcLibTargets.cmake  rpc_libConfig.cmake
baseline2/rpc_lib/proto/: rpc_envelope.options  rpc_envelope.proto
baseline2/rpc_lib/src/: rpc_client.cpp  rpc_server.cpp  rpc_transport.cpp
baseline2/scripts/: run.sh
baseline2/src/: client_app.cpp  server_app.cpp
config/: example_paths.env
data/async/: description.txt
data/batch/: description.txt
data/localVsRemote/: analyse_rtt_csv.py
data/multi-client/: description.txt
data/sync/: description.txt
data/sync/rtt/: analyse_rtt_csv.py
evaluation/: round-trip-colocated-docker.sh  round-trip-colocated.sh  round-trip-docker.sh  round-trip.sh
evaluation/non-docker/: round-trip-colocated.sh  round-trip.sh
evaluation/plotting/scripts/: fft.py  plot.py
evaluation/scripts/: measure_resources.sh
evaluation/scripts/baseline/: round-trip-docker-multiple-msg.sh
evaluation/scripts/colocated/: metrics_by_size.sh  resources-colocated-docker-multiple-msg.sh  round-trip-colocated-docker-multiple-msg.sh  throughput-avg-rtt-colocated-docker-multiple-msg.sh
evaluation/scripts/not-colocated/: resources-docker-multiple-msg.sh  round-trip-docker-multiple-msg.sh  round-trip-docker.sh
evaluation/scripts/not-colocated-same-container/: resources-colocated-docker-multiple-msg.sh  round-trip-colocated-docker-multiple-msg.sh
metrics/: round_trip_cpp_log.txt  round_trip_log_colocated_docker.txt  round_trip_log_colocated_docker_multiple_msg.txt  round_trip_log_docker.txt  rount_trip_log_cpp.txt
metrics/done/: round_trip_log_colocated_docker_singleMessage_aot.txt  round_trip_log_colocated_docker_singleMessage_aot_2core.txt  round_trip_log_colocated_docker_singleMessage_wasm.txt  round_trip_log_colocated_docker_singleMessage_wasm_2core.txt  round_trip_log_colocated_docker_singleMessage_wasm_3core.txt
metrics/done/colocated_wasm/: round_trip_log_colocated_docker_multiple_msg_100.txt  round_trip_log_colocated_docker_multiple_msg_1000.txt  throughput_rtt_batch_log_multiple_msg.csv  throughput_vs_size.csv
metrics/done/jit/: round_trip_log_docker_jit.txt
metrics/done/not_colocated_wasm/: round_trip_log_docker_multiple_msg_1000.txt  rtt_throughput_by_size.csv  throughput_rtt_docker_batch_log_multiple_msg.csv
metrics/leftover/: round_trip_log_colocated_docker_interpreter.txt
metrics/non-docker/: round_trip_colocated_log.txt  round_trip_log.txt
native/: CMakeLists.txt
native/include/: config.h  native_impl.h  wasm_context.h
native/include/ring_buffer_rpc/: rb_message_queue.h  ring_buffer.h  rpc_messaging.h
native/include/rpc/: message_queue.h  native_impl.h  request_id_utils.h  socket_communication.h
native/include/utils/: call_wasm.h  demangle.h  load_module.h  spawn_threads_wasm.h  thread_launch.h  wasm_buffer.h
native/include/wamr/: module.h  runtime.h  thread_env.h  thread_launch.h
native/include/wasm/: call_wasm.h  demangle.h  wasm_buffer.h
native/src/: grpc_host.cpp  native_impl.cpp  rpc_host.cpp  wasm_context.cpp
native/src/hosts/: client_host.cpp  rpc_host.cpp  server_host.cpp
native/src/ring_buffer_rpc/: rb_message_queue.cpp  ring_buffer.cpp  rpc_messaging.cpp
native/src/rpc/: message_queue.cpp  native_impl.cpp  socket_communication.cpp
native/src/runtime/: module.cpp  native_symbols.cpp  native_symbols.h  runtime.cpp  wamr_runtime.cpp
native/src/utils/: call_wasm.cpp  demangle.cpp  load_module.cpp  spawn_threads_wasm.cpp  thread_launch.cpp  wasm_buffer.cpp
native/src/wamr/: load_module.cpp  thread_launch.cpp
native/src/wasm/: call_wasm.cpp  demangle.cpp  wasm_buffer.cpp
proto_messages/: message.proto
rpc_lib/: CMakeLists.txt  build.sh
rpc_lib/cmake/: FindRpcLib.cmake.in
rpc_lib/include/: rpc_client.h  rpc_server.h
rpc_lib/proto/: rpc_envelope.options  rpc_envelope.proto
rpc_lib/src/: rpc_client.cpp  rpc_server.cpp
rpc_lib/src/generated_nano/: rpc_envelope.pb.h
scripts/: run.sh
scripts/native_scripts/: build_host.sh  third_party.sh
scripts/proto_scripts/: setup_proto.sh
scripts/wasm_scripts/: build_wasm.sh  generate_wasm_exports.py  generate_wasm_imports.py  third_party.sh
wasm/: CMakeLists.txt
wasm/generated_nano/: message.pb.c  message.pb.h  rpc_envelope.pb.c
wasm/proto_messages/: BUILD.gn  message.options  message.proto  rpc_envelope.options
wasm/rpc_stub/: CMakeLists.txt
wasm/rpc_stub/src/: wasm_transport.cpp
wasm/src/: client_app.cpp  client_app2.cpp  server_app.cpp
wasm/wasm_libraries/: wasi-toolchain.cmake
wasm/wasm_libraries/Platform/: WASI.cmake
wasm/wasm_libraries/nanopb/: CMakeLists.txt  nanopb_build.sh  nanopb_plugin.sh
(+4 files in other folders)
